--- a/config/config.env
+++ b/config/config.env
@@ -1,7 +1,10 @@
 NODE_ENV=development
 port=5000
 
-MONGO_URI=mongodb+srv://rahulsai14231:rahulsai14231@book-exchange-platform.5jbrm.mongodb.net/
+MONGO_URI=mongodb+srv://saichiragb8:9RY6KgfNrNZ04h8A@cluster0.bpexqbc.mongodb.net/
+
+
+
 
 JWT_SECRET=ksbdajkf68998767jkkjafxvsdabxzcm
 JWT_EXPIRE=1h
